--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dependencies": {
         "@types/cors": "^2.8.19",
         "@types/express": "^5.0.3",
+        "bcrypt": "^6.0.0",
         "cors": "^2.8.5",
         "dotenv": "^17.2.2",
         "express": "^5.1.0",
@@ -27,6 +28,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.34.0",
+        "@types/bcrypt": "^6.0.0",
         "@types/jsonwebtoken": "^9.0.10",
         "@types/node": "^24.3.0",
         "eslint": "^9.34.0",
